--- a/src/app/components/notification/notification.component.scss
+++ b/src/app/components/notification/notification.component.scss
@@ -8,9 +8,10 @@
       }
       
       td, th {
-        border: 1px solid #dddddd;
+          border: none;
+        border-bottom: 1px solid #dddddd;
         text-align: left;
-        padding: 8px;
+        padding: 15px 8px;
       }
       .dot {
         height: 35px;
@@ -28,10 +29,12 @@
     .name {
         display: flex;
     align-items: center;
+    justify-content: center;
     }
     .time {
         display: flex;
         align-items: center;
+        justify-content: center;
     }
     .clock {
         font-size: 19px;
@@ -40,15 +43,19 @@
     .update {
         display: flex;
         align-items: center;  
+        justify-content: center;
     }
     .status {
+        display: flex;
+        justify-content: center;
+        align-items: center;  
         button {
             color: white;
             font-weight: 400;
             border-radius: 2px;
             border: none;
             font-size: 14px;
-            padding: 5px 16px;
+            padding: 8px 25px;
         }
         .fas {
             margin: 0px 5px;
