--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -372,3 +372,24 @@
 	height: 45px;
     width: 100%;
 }
+.status{
+	height: 45px;
+	width: 100%;
+	background-color: blanchedalmond;
+
+}
+.item1{
+	background-color: brown;
+	text-align: center;
+	margin-top: 10px;
+}
+.item2{
+	background-color: cornflowerblue;
+	text-align: center;
+	margin-top: 10px;
+}
+.item3{
+	background-color: darkgreen;;
+	text-align: center;
+	margin-top: 10px;
+}
