--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -123,9 +123,9 @@
 	td.mat-column-position {
 		padding-left: 8px;
 	}
-	.mat-table-sticky:first-child {
-		border-right: 1px solid #e0e0e0;
-	}
+	// .mat-table-sticky:first-child {
+	// 	border-right: 1px solid #e0e0e0;
+	// }
 	.mat-table-sticky:last-child {
 		border-left: 1px solid #e0e0e0;
 	}
@@ -170,6 +170,9 @@
 	border: 1px solid #8080801c;
 }
 
+.statusheading{
+	text-align: center;
+}
 
 /*----integration popup-----*/
 
@@ -358,7 +361,7 @@
 }
 .editicon{
 	position: absolute;
-	left: 15px;
+	left: 42px;
 	z-index: 2;
 }
 // .content:hover .editicon {
@@ -374,22 +377,115 @@
 }
 .status{
 	height: 45px;
-	width: 100%;
+	width: 134px;
 	background-color: blanchedalmond;
 
 }
 .item1{
 	background-color: brown;
+	color: white;
 	text-align: center;
 	margin-top: 10px;
+	font-size: 13px;
+	padding: 2px 8px;
 }
 .item2{
-	background-color: cornflowerblue;
+	background-color: #E2445C;
+	color: white;
 	text-align: center;
 	margin-top: 10px;
+	font-size: 13px;
+	padding: 2px 8px;
 }
 .item3{
-	background-color: darkgreen;;
+	background-color: darkgreen;
+	color: white;
 	text-align: center;
 	margin-top: 10px;
+	font-size: 13px;
+	padding: 2px 8px;
+}
+.item4{
+	background-color: pink;
+	color: white;
+	text-align: center;
+	margin-top: 10px;
+	font-size: 13px;
+	padding: 2px 8px;
+}
+
+// .list{
+// 	padding: 0 4px;
+// }
+.mat-menu-item {
+	line-height: 38px;
+}
+ng-sidebar-container {
+	.notification-main-div {
+		padding: 0px 40px;
+	
+		table {
+			font-family: arial, sans-serif;
+			border-collapse: collapse;
+			width: 100%;
+		  }
+		  
+		  td, th {
+			  border: none;
+			border-bottom: 1px solid #dddddd;
+			text-align: left;
+			padding: 15px 8px;
+		  }
+		  .dot {
+			height: 35px;
+			width: 35px;
+			display: flex;
+			font-size: 13px;
+			vertical-align: middle;
+			border-radius: 50%;
+			background: #673ab7;
+			margin-right: 5px;
+			justify-content: center;
+			align-items: center;
+			color: white;
+		}
+		.name {
+			display: flex;
+		align-items: center;
+		justify-content: center;
+		}
+		.time {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+		}
+		.clock {
+			font-size: 19px;
+			margin-right: 2px;
+		}
+		.update {
+			display: flex;
+			align-items: center;  
+			justify-content: center;
+		}
+		.status {
+			display: flex;
+			justify-content: center;
+			align-items: center;  
+			margin-left: 7px;
+			button {
+				color: white;
+				font-weight: 400;
+				border-radius: 2px;
+				border: none;
+				font-size: 14px;
+				padding: 8px 25px;
+			}
+			.fas {
+				margin: 0px 5px;
+				font-size: 17px;
+				color: #c5bfbf;
+			}
+		}
+	}
 }
