--- a/src/app/components/notification/notification.component.scss
+++ b/src/app/components/notification/notification.component.scss
@@ -49,6 +49,7 @@
         display: flex;
         justify-content: center;
         align-items: center;  
+        margin-left: 7px;
         button {
             color: white;
             font-weight: 400;
