--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -363,7 +363,7 @@
                                                       <th mat-header-cell *matHeaderCellDef class="statusheading"> Name </th>
                                                       <td mat-cell *matCellDef="let element"  >
                                                         <div class="task" >
-                                                            <div class="task1" (click)="_toggleSidebar()">
+                                                            <div class="task1" (click)="openActivity()">
                                                                
                                                               </div>  
                                                            
