--- a/src/app/layout/master/master.component.scss
+++ b/src/app/layout/master/master.component.scss
@@ -71,12 +71,15 @@
       height: 100vh;
       background-color: white;
       // border-right: 1px solid gray;
-
+      i {
+        line-height: 0;
+        font-size: 12px;
+      }
       button {
         background-color: white;
         border: 1px solid #e1e1e1;
         border-left: none;
-        padding: 4px 10px 4px 6px;
+        padding: 4px 8px 4px 6px;
         position: relative;
         top: 9px;
         border-radius: 0 20px 20px 0;
