--- a/src/app/layout/master/master.component.scss
+++ b/src/app/layout/master/master.component.scss
@@ -80,7 +80,7 @@
         border: 1px solid #e1e1e1;
         border-left: none;
         padding: 4px 8px 4px 6px;
-        position: relative;
+        position: absolute;
         top: 9px;
         border-radius: 0 20px 20px 0;
         z-index: 999;
