--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -267,7 +267,11 @@
                         </a>
     
                     </div>
-                    <button class="menubutton" mat-mini-fab [matMenuTriggerFor]="menu">...</button>
+                    <button class="menubutton" mat-mini-fab [matMenuTriggerFor]="menu">
+                        <i class="material-icons">
+                            more_horiz
+                        </i>    
+                    </button>
     
                     <mat-menu #menu="matMenu">
     
